--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,13 +1,13 @@
-@import "{{ site.theme }}";
-
-header {
-
-display: none;
-
-}
-
 #banner .fork {
 
 display: none;
 
 }
+
+
+#banner .button {
+
+display: none;
+
+}
+
