--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,13 +1,8 @@
-#banner .fork {
+---
+---
 
-display: none;
+@import 'jekyll-theme-leap-day';
 
+header {
+    display: none;
 }
-
-
-#banner .button {
-
-display: none;
-
-}
-
