--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,16 @@
 
 @import 'jekyll-theme-leap-day';
 
-header {
-    display: none;
+#banner .fork {
+
+display: none;
+
 }
+
+#banner .button {
+
+display: none;
+
+}
+
+
