--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,6 +16,6 @@ display: none;
 }
 
 #banner #logo {
-    background: url(../images/jenkins.svg);
+    background: url(../images/jenkins-official.svg);
 }
 
