--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,5 +17,8 @@ display: none;
 
 #banner #logo {
     background: url(../images/jenkins-official.svg);
+    height: 77px;
+    width: 256px;
+    top: -14px;
 }
 
